--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -13,7 +13,7 @@
     <a href="http://screencasts.railstutorial.org/">screencast series</a>
     to teach web development with
     <a href="http://rubyonrails.org/">Ruby on Rails</a>.
-    This is the sample application for the tutorial.
+    Ruby tuoi lol 
     </p>
   </body>
 </html>
