--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -6,13 +6,14 @@
   </head>
   <body>
     <h1>Help</h1>
-    <p>
+    
+    </p>
       Get help on the Ruby on Rails Tutorial at the
       <a href="https://www.railstutorial.org/help">Rails Tutorial help
       section</a>.
-      To get help on this sample app, see the
+      To get help on this sample app, see the \n
       <a href="https://www.railstutorial.org/book"><em>Ruby on Rails
       Tutorial</em> book</a>.
-    </p>
+    </p >
   </body>
 </html>
